[gd_scene load_steps=2 format=2]

[ext_resource path="res://resources/Scripts/Online/Network.gd" type="Script" id=1]

[node name="Network" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ConnectionPanel" type="PanelContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -45.0
margin_right = 108.0
margin_bottom = 45.0

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ConnectionPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 209.0
margin_bottom = 83.0
columns = 2

[node name="HostLabel" type="Label" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_top = 5.0
margin_right = 99.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Host:"

[node name="HostField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_left = 103.0
margin_right = 202.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_top = 33.0
margin_right = 99.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "Port:"

[node name="PortField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_left = 103.0
margin_top = 28.0
margin_right = 202.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "9999"

[node name="ServerButton" type="Button" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_top = 56.0
margin_right = 99.0
margin_bottom = 76.0
size_flags_horizontal = 3
text = "Server"

[node name="ClientButton" type="Button" parent="CanvasLayer/ConnectionPanel/GridContainer"]
margin_left = 103.0
margin_top = 56.0
margin_right = 202.0
margin_bottom = 76.0
size_flags_horizontal = 3
text = "Client"

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 14.0
align = 1

[node name="LeaveButton" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -49.0
margin_top = -20.0
text = "Leave"

[node name="SyncLostLabel" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -103.0
margin_bottom = 14.0
text = "Re-connecting..."

[connection signal="pressed" from="CanvasLayer/ConnectionPanel/GridContainer/ServerButton" to="." method="_on_ServerButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/GridContainer/ClientButton" to="." method="_on_ClientButton_pressed"]
[connection signal="pressed" from="CanvasLayer/LeaveButton" to="." method="_on_LeaveButton_pressed"]
